- use StringBuilder rather than StringBuffer for internal operations - use Xxx.valueOf rather than new Xxx for efficiency when creating primitives